--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,20 +38,18 @@
 <div id="wrapper-content">
 	<div id="wrapper-menu-page">
 	<div id="menu-page">
-		<h3>Page navigation</h3>
+		<h3>Priorities</h3>
 		<ul>
-			<li><a href="#">Example Link 1</a></li>
-			<li><a href="#">Example Link 2</a></li>
-			<li><a href="#">Example Link 3</a></li>
-			<li><a href="#">Example Link 4</a></li>
+          <% all_priorities.each do |priority| %>
+          <li><%= link_to_priority priority %></li>
+          <% end %>
 		</ul>
 		
-		<h3>sub page menu</h3>
+		<h3>Tags</h3>
 		<ul>
-			<li><a href="#">Example Link 1</a></li>
-			<li><a href="#">Example Link 2</a></li>
-			<li><a href="#">Example Link 3</a></li>
-			<li><a href="#">Example Link 4</a></li>
+          <% all_tags.each do |tag| %>
+          <li><%= link_to_tag tag %></li>
+          <% end %>
 		</ul>
 	</div><!--menu-page-->
 	</div><!--wrapper-menu-page-->
