Use more of a basic tag cloud for the tags.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,11 +44,9 @@
 		</ul>
 		
 		<h3>Tags</h3>
-		<ul>
-          <% all_tags.each do |tag| %>
-          <li><%= link_to_tag tag %></li>
-          <% end %>
-		</ul>
+        <% all_tags.each do |tag| %>
+        <%= link_to_tag tag %> 
+        <% end %>
 	</div><!--menu-page-->
 	</div><!--wrapper-menu-page-->
 	
