--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,8 @@
 
 <div id="menu-top">
 	<ul>
-		<li><a href="/" title="Home"><span>Home</span></a></li>
+		<li><a href="/" title="Active"><span>Active</span></a></li>
+		<li><a href="/all" title="All"><span>All</span></a></li>
         <% all_priorities.each do |priority| %>
         <li>
           <a href='/priority/<%= priority %>'><span>Priority <%= priority %></span></a>
