basic support for adding a todo

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,6 +18,7 @@
           <a href='/priority/<%= priority %>'><span>Priority <%= priority %></span></a>
         </li>
         <% end %>
+				<li><a href="/add" title="Add"><span>Add</span></a></li>
 	</ul>
 </div><!--menu-top-->
 
