Added a note to #add

--- a/views/add.erb
+++ b/views/add.erb
@@ -1,4 +1,10 @@
 <h1>Add a Todo</h1>
+
+<small>
+  Make sure to enter the priority and any tags in the same format as the file: <br />
+  <em>3 Add a new form #ruby #sinatra</em>
+</small>
+
 <form name="input" action="add" method="post">
 TODO:
 <input type="text" name="todo" />
