--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,9 +1,23 @@
-<h1>Edit Todo</h1>
+<div data-role="page" id="main">
+  <div data-role="header">
+    <h1>Edit Todo</h1>
+    <a href="#new" data-icon="add" class="ui-btn-right">New</a>
+  </div>
 
-<form name="input" action="/update" method="post">
-  <input type="hidden" name="_method" value="put" />
-  <input type="hidden" name="line" value="<%= h @todo.line_number %>" />
-  TODO:
-  <input type="text" name="todo" value="<%= h @todo.raw_line %>"/>
-  <input type="submit" value="Edit" />
-</form>
+  <div data-role="content">
+    
+
+    <form name="input" action="/update" method="post">
+      <input type="hidden" name="_method" value="put" />
+      <input type="hidden" name="line" value="<%= h @todo.line_number %>" />
+      TODO:
+      <input type="text" name="todo" value="<%= h @todo.raw_line %>"/>
+      <input type="submit" value="Edit" />
+    </form>
+
+  </div>
+
+  <div data-role="footer">
+  </div>
+</div>  
+
