--- a/views/edit.erb
+++ b/views/edit.erb
@@ -7,7 +7,7 @@
   <div data-role="content">
     
 
-    <form name="input" action="/update" method="post">
+    <form name="input" action="/update" method="post"  data-ajax="false">
       <input type="hidden" name="_method" value="put" />
       <input type="hidden" name="line" value="<%= h @todo.line_number %>" />
       TODO:
