Add a footer and use the main add view

--- a/views/add.erb
+++ b/views/add.erb
@@ -1,12 +1,5 @@
-<h1>Add a Todo</h1>
-
-<small>
-  Make sure to enter the priority and any tags in the same format as the file: <br />
-  <em>3 Add a new form #ruby #sinatra</em>
-</small>
-
-<form name="input" action="add" method="post">
-TODO:
-<input type="text" name="todo" />
-<input type="submit" value="Submit" />
-</form>
+      <form name="input" action="add" method="post">
+        <label for="todo">TODO item:</label>
+        <input type="text" id="todo" name="todo" />
+        <input type="submit" value="Submit" />
+      </form>
