Title/header cleanup

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <html manifest="/cache.manifest">
   <meta charset="utf-8">
-  <title>Emacs Todos <%= h(@page_title) %></title>
+  <title><%= h(@page_title) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="/style.css">
