--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
 </head> 
 
 <body> 
-  <div data-role="page" id="main">
+  <div data-role="page" id="main" data-add-back-btn="true">
     <div data-role="header">
       <h1><%= h(@page_title) %></h1>
       <a href="/add" data-icon="add" class="ui-btn-right">New</a>
