--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,9 +5,9 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
+	<link rel="stylesheet" href="/jquery.mobile-1.0b2.min.css" />
+	<script type="text/javascript" src="/jquery-1.6.2.min.js"></script>
+	<script type="text/javascript" src="/jquery.mobile-1.0b2.min.js"></script>
 </head> 
 
 <body> 
