--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,4 @@
-<html>
+<html manifest="/cache.manifest">
   <meta charset="utf-8">
   <title>Emacs Todos <%= h(@page_title) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
