Better caching and application cache swapping

--- a/views/cache_manifest.erb
+++ b/views/cache_manifest.erb
@@ -6,6 +6,7 @@ NETWORK:
 /update
 CACHE:
 /style.css
+/app.js
 /
 /all
 <% all_priorities.each do |priority| %>
@@ -17,4 +18,4 @@ CACHE:
 FALLBACK:
 / /offline
 
-# rev 9
+# <%= @cache_revision %>
