--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <title>Emacs Todos <%= h(@page_title) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <script type="text/javascript" src="/app.js"></script>
 </head>
 
 <body>
