Better caching and application cache swapping

--- a/views/cache_manifest.erb
+++ b/views/cache_manifest.erb
@@ -13,10 +13,11 @@ CACHE:
 /jquery-1.6.2.min.js
 /jquery.mobile-1.0b2.min.css
 /jquery.mobile-1.0b2.min.js
+/app.js
 <% @images.each do |image_location| %>
 <%= image_location %>
 <% end %>
 FALLBACK:
 / /offline
 
-# rev 9
+# <%= @cache_revision %>
