--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/jquery.mobile-1.0b2.min.css" />
 	<script type="text/javascript" src="/jquery-1.6.2.min.js"></script>
 	<script type="text/javascript" src="/jquery.mobile-1.0b2.min.js"></script>
+  <script type="text/javascript" src="/app.js"></script>
 </head> 
 
 <body> 
