--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,60 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<title>Emacs Todos <%= h(@page_title) %></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="author" content="http://www.littlestreamsoftware.com" />
-	<link rel="stylesheet" type="text/css" href="/style.css" />
+<html>
+  <meta charset="utf-8">
+  <title>Emacs Todos <%= h(@page_title) %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
-
-<div id="menu-top">
-	<ul>
-		<li><a href="/" title="Active"><span>Active</span></a></li>
-		<li><a href="/all" title="All"><span>All</span></a></li>
+<div id="container">
+    <header>
+      <nav>
         <% all_priorities.each do |priority| %>
-        <li>
-          <a href='/priority/<%= priority %>'><span>Priority <%= priority %></span></a>
-        </li>
+          <%= link_to_priority(priority) %>
         <% end %>
-				<li><a href="/add" title="Add"><span>Add</span></a></li>
-	</ul>
-</div><!--menu-top-->
-
-<!-- mejobloggs: sorry about all these wrappers. It is a lot of structural markup .
-		If you know how to do this with less structural markup, contact my throught my
-		OWD user page: http://www.openwebdesign.org/userinfo.phtml?user=mejobloggs -->
-<div id="wrapper-header">
-<div id="header">
-<div id="wrapper-header2">
-<div id="wrapper-header3">
-	<h1>&nbsp;</h1>
-</div><!--wrapper-header3-->
-</div><!--wrapper-header2-->
-</div><!--header-->
-</div><!--wrapper-header-->
-
-<div id="wrapper-content">
-	<div id="wrapper-menu-page">
-	<div id="menu-page">
-		<h3>Tags</h3>
-        <p>
-        <% all_tags.each do |tag| %>
-        <%= link_to_tag tag %> 
-        <% end %>
-        </p>
-	</div><!--menu-page-->
-	</div><!--wrapper-menu-page-->
-	
-	<div id="content">
+      </nav>
+    </header>
+    <div id="main" role="main">
       <%= yield %>
-  </div><!--content-->
-</div><!--wrapper-content-->
+    </div>
 
-<div id="wrapper-footer">
-  Developed and Copyright <a href="http://www.littlestreamsoftware.com">Eric Davis, Little Stream Software</a>.  Design by <a href="http://www.opensourcetemplates.org/templates/preview/1247149577/">Studio7designs.com</a>
-</div><!--wrapper-footer-->
-
+    <footer>
+    </footer>
 </body>
 </html>
