--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <title>Emacs Todos <%= h(@page_title) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/app.js"></script>
 </head>
