--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,13 @@
-nav { text-align: center; }
+#container { width: 100%; }
 #main { width: 100%; }
 .todo-list { list-style: none; padding-left: 0;}
 .todo-item {border: 1px solid #000; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;}
 .todo-item:hover { background: yellow; }
 .todo-item .priority { padding: 0 2px; }
-.edit { float: right; }
+.edit { padding: 0 10px; 
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
+text-decoration: none;
+background: yellow;
+}
