--- a/views/index.erb
+++ b/views/index.erb
@@ -3,16 +3,16 @@
 <% if @todos.empty? %>
 <p>No todos found.</p>
 <% else %>
-<ol class="todo-list">
+<section class="todo-list">
 <% @todos.each do |todo| %>
-<li class="todo-item">
+<article class="todo-item">
   <%= link_to_priority todo.priority %>
   <%= todo.content %>
   <% todo.tags.each do |tag| %>
   <%= link_to_tag tag %>
   <% end %>
   <%= edit_link(todo) %>
-</li>
+</article>
 <% end %>
-</ol>
+</section>
 <% end %>  
