--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html manifest="/cache.manifest">
   <meta charset="utf-8">
   <title><%= h(@page_title) %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/app.js"></script>
