--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,7 @@
         <% all_priorities.each do |priority| %>
           <%= link_to_priority(priority) %>
         <% end %>
+        <a class="reload" href="#" onclick="window.location.reload();">Reload</a>
       </nav>
     </header>
     <div id="main" role="main">
