--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,8 @@
 <div id="container">
     <header>
       <nav>
+        <a href="/">Active</a>
+        <a href="/all">All</a>
         <% all_priorities.each do |priority| %>
           <%= link_to_priority(priority) %>
         <% end %>
