Add a reload link that will swap the cache and force a page reload

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
         <% all_priorities.each do |priority| %>
           <%= link_to_priority(priority) %>
         <% end %>
-        <a class="reload" href="#" onclick="window.location.reload();">Reload</a>
+        <a class="reload" href="#" onclick="forceReload();">Reload</a>
       </nav>
     </header>
     <div id="main" role="main">
