--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <script type="text/javascript" src="/zepto.min.js"></script>
   <script type="text/javascript" src="/app.js"></script>
 </head>
 
