--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,5 @@
 <h1>Todos</h1>
 
-<% if @todos.empty? %>
-<p>No todos found.</p>
-<% else %>
-<section class="todo-list">
-<% @todos.each do |todo| %>
-<article class="todo-item">
-  <%= link_to_priority todo.priority %>
-  <%= auto_link(todo.content) %>
-  <% todo.tags.each do |tag| %>
-  <%= link_to_tag tag %>
-  <% end %>
-  <%= edit_link(todo) %>
-</article>
-<% end %>
+<section id="todos" class="todo-list">
 </section>
-<% end %>  
+
