--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,8 +12,8 @@
 <div id="container">
     <header>
       <nav>
-        <a href="/">Active</a>
-        <a href="/all">All</a>
+        <a class="active" href="/">Active</a>
+        <a class="all" href="/all">All</a>
         <% all_priorities.each do |priority| %>
           <%= link_to_priority(priority) %>
         <% end %>
